testsuite/bsc.typechecker/bound-type-vars/BVC.bs
package BVC where

h :: Bool -> Bool
h x = to ((from x) :: Bool)
